--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,10 @@
 {
 	"require": {
-		"laravel/framework": "4.0.*"
+		"laravel/framework": "4.0.*",
+		"way/generators": "dev-master",
+		"laravelbook/ardent": "dev-master",
+		"zizaco/confide": "dev-master",
+		"zizaco/entrust": "dev-master"
 	},
 	"autoload": {
 		"classmap": [
